[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/Objects/Gate.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Objects/Lever.png" type="Texture" id=2]
[ext_resource path="res://src/UI/PressUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Gate&Lever.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Gate&Lever" type="Node2D"]
script = ExtResource( 4 )

[node name="Gate" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Gate"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
shape = SubResource( 1 )

[node name="Lever" type="Area2D" parent="."]
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Lever"]
position = Vector2( 80, 48 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lever"]
position = Vector2( 80, 48 )
shape = SubResource( 2 )

[node name="PressUp" parent="Lever" instance=ExtResource( 3 )]
position = Vector2( 80, -12 )
frame = 0

[connection signal="body_entered" from="Lever" to="." method="_on_Lever_body_entered"]
[connection signal="body_exited" from="Lever" to="." method="_on_Lever_body_exited"]
